--- a/okiTCMobile/index.html
+++ b/okiTCMobile/index.html
@@ -4,20 +4,13 @@
   <title>oki</title> 
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <link rel="stylesheet" href="tc.css" />
+  <link rel="stylesheet" href="css/tc.css" />
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
   
-  <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/esri/dijit/css/Popup.css"/>
-  <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/dojo/dijit/themes/claro/claro.css">
-  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
-  <script type="text/javascript" src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.1compact"></script>
-  <script type="text/javascript" src="app.js"></script>
-  <script type="text/javascript">
-      dojoConfig = {
-        parseOnLoad:true
-      }
-    </script>
+  <link rel="stylesheet" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/esri/dijit/css/Popup.css"/>
+  <link rel="stylesheet" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/dojo/dijit/themes/claro/claro.css">
+
+  <script src="js/libs/modernizr-2.0.6.min.js"></script>
 </head>
   
   <body onorientationchange="orientationChanged();">
@@ -76,8 +69,10 @@
       <div data-role="header">
         <h1><span>Legend</span></h1>
       </div>
+      
+
       <div data-role="content">
-        <div id="legendDiv"><ul id="legendList"></ul></div>
+        <div id="legendDiv"></div>        
       </div>
     </div>
 
@@ -100,7 +95,15 @@
         </div>
       </div>
     </div>
+  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
+  <script type="text/javascript" src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.1compact"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript">
+      dojoConfig = {
+        parseOnLoad:true
+      }
+    </script>
   </body>
 
 </html>
-
