--- a/okiTCMobile/index.html
+++ b/okiTCMobile/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html> 
 <html> 
   <head> 
-  <title>oki</title> 
+  <title>oki</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=7,IE=9" />
+    <!--The viewport meta tag is used to improve the presentation and behavior
+    of the samples on iOS devices--> 
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <link rel="stylesheet" href="css/tc.css" />
