--- a/okiTCMobile/index.html
+++ b/okiTCMobile/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html> 
-<html> 
-  <head> 
+<!DOCTYPE html>
+<head>
   <title>oki</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=7,IE=9" />
@@ -10,20 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <link rel="stylesheet" href="css/tc.css" />
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
-  
-  <link rel="stylesheet" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/esri/dijit/css/Popup.css"/>
-  <link rel="stylesheet" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/dojo/dijit/themes/claro/claro.css">
-
-  <script src="js/libs/modernizr-2.0.6.min.js"></script>
+    <link rel="stylesheet" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/esri/dijit/css/Popup.css"/>
+    <script src="js/libs/modernizr-2.0.6.min.js"></script>
 </head>
-  
   <body onorientationchange="orientationChanged();">
-
     <div data-role="page" id="mapPage" class="page-map">
       <div id="header" data-role="header">
         <h1><span id="webmapTitle">OKI Traffic Count</span></h1>
         <a id="geolocate" data-icon="custom" href="#" onclick="getLocation();" class="ui-btn-left" data-iconpos="notext" title="Locate"></a>
-        <a id="info" data-icon="gear" href="#" data-rel="dialog" class="ui-btn-right" data-iconpos="notext"></a>
+        <a id="info" data-icon="info" href="#infoDialog" data-rel="dialog" class="ui-btn-right" data-iconpos="notext"></a>
       </div>
       <div data-role="content" id="mapcontent">
         <div id="map"></div>
@@ -37,10 +31,8 @@
               <!-- <a id="layers" data-icon="custom"  href="#layerDialog" data-rel="page">Layers</a> -->
             </li>
             <li>
-              <!-- <a id="legend" data-icon="custom"  href="#legendDialog" data-rel="dialog">Legend</a> -->
             </li>
             <li>
-              <!-- <a id="details" data-icon="custom"  href="#detailDialog" data-rel="page">Basemap</a> -->
             </li>
             <li>
               <a id="searchMap" data-icon="custom" href="#searchDialog" data-rel="dialog">Search</a>
@@ -49,7 +41,6 @@
         </div>
       </div>
     </div>
-
     <!--Search Dialog-->
     <div id="searchDialog" data-role="dialog">
       <div data-role="header">
@@ -60,43 +51,31 @@
           <label for="search">
             Search location:
           </label>
-          <input type="search" onKeyDown="if(event.keyCode === 13)findLocation();" id="search"
-          value="" />
+          <input type="search" onKeyDown="if(event.keyCode === 13)doFind();" id="streetName"
+          value="Compton Rd" />
         </div>
         <ul id="searchList" data-role="listview">
         </ul>
       </div>
     </div>
-
     <!--Legend Dialog-->
     <div id="legendDialog" data-role="dialog">
       <div data-role="header">
         <h1><span>Legend</span></h1>
       </div>
-      
-
-      <div data-role="content">
+        <div data-role="content">
         <div id="legendDiv"></div>        
       </div>
     </div>
-
-    <!--Map Details Dialog-->
+    <!--Info Dialog-->
     <div id="infoDialog" data-role="dialog">
       <div data-role="header">
-        <h1>
-          <span id="webmapTitleInfo">
-          </span>
-        </h1>
+        <h1><span>Info</span></h1>
       </div>
-      <div data-role="content">
-        <div id="contentDiv">
-          <div id="mapDetails">
-            <div id="snippet">
-            </div>
-            <div id="description">
-            </div>
-          </div>
-        </div>
+        <div data-role="content">
+        <div id="infoDiv">
+          <p>Need info here</p>
+        </div>        
       </div>
     </div>
   <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
@@ -109,5 +88,4 @@
       }
     </script>
   </body>
-
 </html>
