--- a/index.html
+++ b/index.html
@@ -1,49 +1,92 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7,IE=9" />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no"/>
-    <title>oki traffic counts</title>
-    <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/dojo/dijit/themes/claro/claro.css">
-    <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/dojo/dojox/grid/resources/Grid.css">
-    <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/dojo/dojox/grid/resources/claroGrid.css">
-    <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/esri/dijit/css/Popup.css"/>
-    <script type="text/javascript">
+<head>
+  <title>oki</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=7,IE=9" />
+    <!--The viewport meta tag is used to improve the presentation and behavior
+    of the samples on iOS devices--> 
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <link rel="stylesheet" href="css/tc.css" />
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
+    <link rel="stylesheet" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/esri/dijit/css/Popup.css"/>
+    <script src="js/libs/modernizr-2.0.6.min.js"></script>
+</head>
+  <body onorientationchange="orientationChanged();">
+    <div data-role="page" id="mapPage" class="page-map">
+      <div id="header" data-role="header">
+        <h1><span id="webmapTitle">OKI Traffic Count</span></h1>
+        <a id="geolocate" data-icon="custom" href="#" onclick="getLocation();" class="ui-btn-left" data-iconpos="notext" title="Locate"></a>
+        <a id="info" data-icon="info" href="#infoDialog" data-rel="dialog" class="ui-btn-right" data-iconpos="notext"></a>
+      </div>
+      <div data-role="content" id="mapcontent">
+        <div id="map"></div>
+      </div>
+      <!--Navbar-->
+      <div id="footer" data-role="footer">
+        <div data-role="navbar" class="customIcons">
+          <ul>
+            <li>
+              <a id="legend" data-icon="custom"  href="#legendDialog" data-rel="dialog">Legend</a>
+              <!-- <a id="layers" data-icon="custom"  href="#layerDialog" data-rel="page">Layers</a> -->
+            </li>
+            <li>
+            </li>
+            <li>
+            </li>
+            <li>
+              <a id="searchMap" data-icon="custom" href="#searchDialog" data-rel="dialog">Search</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!--Search Dialog-->
+    <div id="searchDialog" data-role="dialog">
+      <div data-role="header">
+        <h1><span>Search</span></h1>
+      </div>
+      <div data-role="content">
+        <div data-role="fieldcontain">
+          <label for="search">
+            Search location:
+          </label>
+          <input type="search" onKeyDown="if(event.keyCode === 13)doFind();" id="streetName"
+          value="Compton Rd" />
+        </div>
+        <ul id="searchList" data-role="listview">
+        </ul>
+      </div>
+    </div>
+    <!--Legend Dialog-->
+    <div id="legendDialog" data-role="dialog">
+      <div data-role="header">
+        <h1><span>Legend</span></h1>
+      </div>
+        <div data-role="content">
+        <div id="legendDiv"></div>        
+      </div>
+    </div>
+    <!--Info Dialog-->
+    <div id="infoDialog" data-role="dialog">
+      <div data-role="header">
+        <h1><span>Info</span></h1>
+      </div>
+        <div data-role="content">
+        <div id="infoDiv">
+          <p>Need info here</p>
+        </div>        
+      </div>
+    </div>
+  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
+  <script type="text/javascript" src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.1compact"></script>
+  <script src="js/libs/fidget.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript">
       dojoConfig = {
         parseOnLoad:true
       }
     </script>
-    <style>
-      html, body { height: 100%; width: 100%; margin: 0; padding: 0; }
-    </style>
-    <script type="text/javascript" src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.1"></script>
-
-    <script type="text/javascript" src="js/script.js"></script>
-  
-  </head>
-  <body class="claro">
-  <div data-dojo-type="dijit.layout.BorderContainer" data-dojo-props="design:'headline'"  style="width:100%;height:100%;margin:0;">
-    <div data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'top'" style="height:40px;">
-      Street Name: <input type="text" id="streetName" size="60" value="US 50" />
-      <button data-dojo-type="dijit.form.Button"  data-dojo-props='onClick:function(){ doFind();}, value:"Search"'>
-        Search
-      </button>
-    </div>
-    <div id="map" data-dojo-props="region:'center'" data-dojo-type="dijit.layout.ContentPane" style="border:1px solid #000;"></div>
-    <div data-dojo-type="dijit.layout.ContentPane" data-dojo-props="region:'bottom'" style="height:150px;">
-     <table data-dojo-type="dojox.grid.DataGrid" data-dojo-id="grid"  id="grid" data-dojo-props="rowsPerPage:'5', rowSelector:'20px'">
-      <thead>
-        <tr>
-          
-          <th field="Main_Stree" >Main Street</th>
-          <th field="Dir">Direction</th>
-          <th field="Cross_Stre">Cross Street</th>
-          <th field="AADT" width="100%">AADT</th>
-        </tr>
-      </thead>
-    </table>
-    </div>
-  </div>
   </body>
 </html>
