--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
+<!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]-->
+<!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-  <title>oki</title>
+  <title>OKI Traffic Counts</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=7,IE=9" />
-    <!--The viewport meta tag is used to improve the presentation and behavior
-    of the samples on iOS devices--> 
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" />
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320"> 
   <link rel="stylesheet" href="css/tc.css" />
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
-    <link rel="stylesheet" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/esri/dijit/css/Popup.css"/>
-    <script src="js/libs/modernizr-2.0.6.min.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+  <link rel="stylesheet" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.1/js/esri/dijit/css/Popup.css"/>
+  <script src="js/libs/modernizr-2.0.6.min.js"></script>
 </head>
   <body onorientationchange="orientationChanged();">
     <div data-role="page" id="mapPage" class="page-map">
       <div id="header" data-role="header">
-        <h1><span id="webmapTitle">OKI Traffic Count</span></h1>
+        <h1><span id="webmapTitle">OKI Traffic Counts</span></h1>
         <a id="geolocate" data-icon="custom" href="#" onclick="getLocation();" class="ui-btn-left" data-iconpos="notext" title="Locate"></a>
         <a id="info" data-icon="info" href="#infoDialog" data-rel="dialog" class="ui-btn-right" data-iconpos="notext"></a>
       </div>
@@ -78,15 +80,33 @@
         </div>        
       </div>
     </div>
-  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
-  <script type="text/javascript" src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.1compact"></script>
-  <script src="js/libs/fidget.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="js/app.js"></script>
+  <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
+  <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+  <script src="js/libs/jqm.autoComplete-1.4.3-min.js"></script>
+  <script src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=3.1compact"></script>
+  <script src="js/app.js"></script>
   <script type="text/javascript">
       dojoConfig = {
         parseOnLoad:true
       }
     </script>
+<!-- 
+  <script>
+
+    $("#searchDialog").bind("pageshow", function(e) {
+
+      var availableTags = ['24', 'about me', 'Adobe', 'AIR', 'AJAX', 'Android', 'Apple', 'Aptana', 'autoComplete', 'Bflex-BFusion', 'Blackberry Playbook', 'Blog Housekeeping', 'c25k', 'CFConversations', 'CFinNC', 'cfObjective', 'CFUnited', 'Clients', 'ColdFusion', 'ColdFusion Builder', 'Cooking and Recipes', 'CSS', 'D2WC', 'dribbbleCFC', 'Eclipse', 'Ember.js', 'Emile', 'ExtendScript', 'Family', 'Fireworks', 'Flash', 'Flex', 'foursquareCFC', 'From a former designer', 'Giveaways', 'Goba', 'Hardware', 'Illustrator', 'instagramCFC', 'iPhone', 'JavaScript', 'job openings', 'jobs', 'jQuery', 'jQuery Mobile', 'jQuery Mobile Boilerplate', 'kloutCFC', 'Lost', 'MAX', 'mobile', 'Movies and Reviews', 'ncfug', 'openExchangeRateCFC', 'Palm Pre', 'pastebinCFC', 'PhoneGap', 'Photoshop', 'picasaCFC', 'podcast', 'presentations', 'projects', 'reading', 'regular expressions', 'RIAUnleashed', 'Shrinkadoo', 'shrinkURL', 'SQL', 'swipeButton', 'technology', 'textCounter', 'the internet', 'ThemeRoller', 'tumblrCFC', 'Undelivrnator', 'video', 'Wallpapers', 'web development', 'Whiskerino', 'XCode and Interface Builder', 'XUIJS'];
+
+      $("#streetName").autocomplete({
+        target: $('#suggestions'),
+        source: availableTags,
+        link: 'target.html?term=',
+        minLength: 1,
+        matchFromStart: true
+      });
+    });
+  </script>  
+   -->
   </body>
 </html>
